Add support to playing Youtube video on jvm(Desktop), but there is some limitation.